# question-time

./: .gitignore  README.md  pyproject.toml
QuestionTime/: settings.py  urls.py
QuestionTime/questions/: __init__.py  admin.py  apps.py  models.py  signals.py
QuestionTime/questions/api/: serializers.py
QuestionTime/questions/migrations/: 0001_initial.py
QuestionTime/templates/: base.html
QuestionTime/templates/django_registration/: registration_form.html
QuestionTime/templates/registration/: login.html
QuestionTime/users/: admin.py  forms.py
QuestionTime/users/api/: serializers.py  urls.py  views.py
QuestionTime/users/migrations/: 0001_initial.py
