[tool.poetry]
name = "QuestionTime"
version = "0.1.0"
description = ""
authors = ["Felipe Benites Cabral <felipe.benites@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
django-allauth = "^0.42.0"
django-crispy-forms = "^1.9.2"
django-registration = "^3.1"
django-rest-auth = "^0.9.5"
djangorestframework = "^3.11.1"
oauthlib = "^3.1.0"
python-decouple = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-django = "^3.9.0"
django-extensions = "^3.0.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
